--- a/views/login.jade
+++ b/views/login.jade
@@ -9,5 +9,6 @@ include includes/nav
    input(type="password",class="form-control", placeholder="Password", id="user[password]",name='user[password]')
   .checkbox
    label
-    input(type="checkbox") Remember me
+    input(type="checkbox") 
+    Remember me
   button.btn.btn-default(type='submit') Sign in
