--- a/views/login.jade
+++ b/views/login.jade
@@ -3,8 +3,8 @@
  form.navbar-form.navbar-left(role="login" action='/login',method='post')
   .form-group
    label.sr-only(for='user[email]') Email Address
-   input(type="email",class="form-control", placeholder="Enter Email", id="user[email]",name='user[email]')
+   input.form-control.input-sm(type="email", placeholder="Enter Email", id="user[email]",name='user[email]')
   .form-group
    label.sr-only(for='user[password]') Password
-   input(type="password",class="form-control", placeholder="Password", id="user[password]",name='user[password]')
+   input.form-control.input-sm((type="password", placeholder="Password", id="user[password]",name='user[password]')
   button.btn.btn-default(type='submit') Sign in
