--- a/views/entryForm.jade
+++ b/views/entryForm.jade
@@ -9,6 +9,7 @@ script.
    $("<div id='entry_"+nth+"'><label>Entry Label</label><input name='page[entries]["+nth+"][label]'><label>Entry Content</label><input name='page[entries]["+nth+"][content]'><label>Entry Link</label><input name='page[entries]["+nth+"][link]'><label>Entry Link Description</label><input name='page[entries]["+nth+"][linkdesc]'><label>Entry Link Type</label><input name='page[entries]["+nth+"][type]'></div>").insertBefore("#end");    
    // $("<p> The "+nth+" test </p>").insertBefore("#end");
   }
+//form.entry(method="post" action="/"+user+"/"+method);
 form.entry(method="post" action="/"+user+"/new")
   if(path)
     label Previous Path
