--- a/views/login.jade
+++ b/views/login.jade
@@ -6,5 +6,5 @@
    input.form-control.input-sm(type="email", placeholder="Enter Email", id="user[email]",name='user[email]')
   .form-group
    label.sr-only(for='user[password]') Password
-   input.form-control.input-sm((type="password", placeholder="Password", id="user[password]",name='user[password]')
+   input.form-control.input-sm(type="password", placeholder="Password", id="user[password]",name='user[password]')
   button.btn.btn-default(type='submit') Sign in
