--- a/views/entryForm.jade
+++ b/views/entryForm.jade
@@ -10,7 +10,7 @@ script.
    // $("<p> The "+nth+" test </p>").insertBefore("#end");
   }
 //form.entry(method="post" action="/"+user+"/"+method);
-form.entry(method="post" action="/"+user+"/new")
+form.entry(method="post" action="/"+user+"/"+method)
   if(path)
     label Previous Path
     input(type=hidden, name="path",value=path)
