--- a/views/login.jade
+++ b/views/login.jade
@@ -1,5 +1,5 @@
 //include includes/nav
-form.navbar-form.navbar-left(role="login" action='/login',method='post')
+form.navbar-form.navbar-left(role="login" action='/login',method='post',margin-top='0px',margin-bottom='0px')
   .form-group
    input.form-control.input-sm(type="email", placeholder="Enter Email", id="user[email]",name='user[email]')
   .form-group
