--- a/views/login.jade
+++ b/views/login.jade
@@ -1,7 +1,2 @@
 //include includes/nav
-form.navbar-form.navbar-left(role="login" action='/login',method='post')
-  .form-group
-   input.form-control.input-sm(type="email", placeholder="Enter Email", id="user[email]",name='user[email]')
-  .form-group
-   input.form-control.input-sm(type="password", placeholder="Password", id="user[password]",name='user[password]')
-  button.btn.btn-default(type='submit') Sign in
+button(type="button",class="btn btn-default",data-container="body",data-toggle="popover",data-placement="bottom", data-content="<form role="login" action='/login' method='post'><div class="form-group"><input class="form-control input-sm" type="email" placeholder="Enter Email" id="user[email]" name='user[email]'></div><div class="form-group"><input class="form-control input-sm" type="password"  placeholder="Password"  id="user[password]" name='user[password]'></div><button class="btn btn-default" type='submit'> Sign in</btn>")
