--- a/views/login.jade
+++ b/views/login.jade
@@ -1,4 +1,5 @@
-button.btn.btn-primary(type="button", data-toggle="modal" data-target=".login-modal")Log in
+button.btn.btn-primary(type="button", data-toggle="modal" data-target=".login-modal")
+ Log in
 .modal.fade.login-modal(tabindex="-1",role="login")
  .modal-dialog.modal-sm
   .modal-content
