--- a/views/login.jade
+++ b/views/login.jade
@@ -1,5 +1,5 @@
 button.btn.btn-primary(type="button", data-toggle="modal" data-target=".login-modal")
- "Log in"
+ Login
 .modal.fade.login-modal(tabindex="-1",role="login")
  .modal-dialog.modal-sm
   .modal-content
@@ -8,4 +8,5 @@ button.btn.btn-primary(type="button", data-toggle="modal" data-target=".login-mo
      input.form-control.input-sm(type="email", placeholder="Enter Email", id="user[email]",name='user[email]')
     .form-group
      input.form-control.input-sm(type="password", placeholder="Password", id="user[password]",name='user[password]')
-    button.btn.btn-default(type='submit') Sign in
+    .form-group
+     button.btn.btn-default(type='submit') Sign in
