--- a/views/login.jade
+++ b/views/login.jade
@@ -1,5 +1,5 @@
 button.btn.btn-primary(type="button", data-toggle="modal" data-target=".login-modal")
- Login
+ span.glyphicon.glyphicon-login(aria-hidden=true)
 .modal.fade.login-modal(tabindex="-1",role="login")
  .modal-dialog.modal-sm
   .modal-content
