--- a/views/login.jade
+++ b/views/login.jade
@@ -3,10 +3,9 @@ button.btn.btn-primary(type="button", data-toggle="modal" data-target=".login-mo
 .modal.fade.login-modal(tabindex="-1",role="login")
  .modal-dialog.modal-sm
   .modal-content
-   form.navbar-form.navbar-left(role="login" action='/login',method='post')
+   form.form-inline(role="login" action='/login',method='post')
     .form-group
      input.form-control.input-sm(type="email", placeholder="Enter Email", id="user[email]",name='user[email]')
     .form-group
      input.form-control.input-sm(type="password", placeholder="Password", id="user[password]",name='user[password]')
-    .form-group
-     button.btn.btn-default(type='submit') Sign in
+    button.btn.btn-default(type='submit') Sign in
