--- a/views/login.jade
+++ b/views/login.jade
@@ -5,7 +5,9 @@ button.btn.btn-primary(type="button", data-toggle="modal" data-target=".login-mo
   .modal-content
    form.form-inline(role="login" action='/login',method='post')
     .form-group
+     label.sr-only(for="user[email]") Enter Email
      input.form-control.input-sm(type="email", placeholder="Enter Email", id="user[email]",name='user[email]')
     .form-group
+     label.sr-only(for="user[password]") Password
      input.form-control.input-sm(type="password", placeholder="Password", id="user[password]",name='user[password]')
     button.btn.btn-default(type='submit') Sign in
