--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -18,7 +18,9 @@ html(lang="en")
        p.navbar-text=page.title
      else
        p.navbar-text Active Portfolio
-     p.hidden-xs.navbar-text="    ::    "
+     p.hidden-xs.navbar-text="    "
+      span.glyphicon.glyphicon-globe 
+      "    "
      p.navbar-text#recognizer="Nobody Home!"
      script.
        setRec('/recognize');
