--- a/views/login.jade
+++ b/views/login.jade
@@ -1,4 +1,4 @@
-button.btn.btn-primary(type="button", data-toggle="modal" data-target=".login-modal")
+button.btn.btn-default(type="button", data-toggle="modal" data-target=".login-modal",aria-label="login")
  span.glyphicon.glyphicon-login
 .modal.fade.login-modal(tabindex="-1",role="login")
  .modal-dialog.modal-sm
