--- a/views/includes/tools.jade
+++ b/views/includes/tools.jade
@@ -1,6 +1,5 @@
-//button.btn.btn-default(type="button", data-toggle="modal" data-target=".login-modal",aria-label="login")
-span.glyphicon.glyphicon-log-in(data-toggle="modal", data-target=".login-modal",aria-label="login")
-.modal.fade.login-modal(tabindex="-1",role="login")
+span.glyphicon.glyphicon-cog(data-toggle="modal", data-target=".tools-modal",aria-label="tools")
+.modal.fade.tools-modal(tabindex="-1",role="tools")
  .modal-dialog.modal-sm
   .modal-content
    form.form-inline(role="login" action='/login',method='post')
