--- a/views/includes/tools.jade
+++ b/views/includes/tools.jade
@@ -10,3 +10,5 @@ span.glyphicon.glyphicon-cog(data-toggle="modal", data-target=".tools-modal",ari
      label.sr-only(for="user[password]") Password
      input.form-control.input-sm(type="password", placeholder="Password", id="user[password]",name='user[password]')
     button.btn.btn-default(type='submit') Sign in
+a(href="/logout")
+ span.glyphicon.glyphicon-log-out(aria-label="logout")
