--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -2,6 +2,15 @@ doctype html
 html(lang="en")
  include head
  body
+   div(id="fb-root")
+   script.
+     (function(d, s, id) {
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) return;
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=1421237764808842&version=v2.0";
+     fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));</script>
    script.
       function setViewer(e){
         $("#viewport").load(e);
@@ -20,6 +29,7 @@ html(lang="en")
        p.navbar-text Active Portfolio
      p.hidden-xs.navbar-text=" "
       span.glyphicon.glyphicon-globe 
+     .fb-share-button(data-href="https://developers.facebook.com/docs/plugins/", data-layout="button")
      p.navbar-text#recognizer="Nobody Home!"
      script.
        setRec('/recognize');
