--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -29,7 +29,7 @@ html(lang="en")
        p.navbar-text Active Portfolio
      p.hidden-xs.navbar-text=" "
       span.glyphicon.glyphicon-globe 
-     .fb-share-button(data-href="https://developers.facebook.com/docs/plugins/", data-layout="button")
+     .fb-share-button(data-href="http://apcentral.herokuapp.com/"+user.shortname, data-layout="button")
      p.navbar-text#recognizer="Nobody Home!"
      script.
        setRec('/recognize');
