--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -31,6 +31,9 @@ html(lang="en")
       span.glyphicon.glyphicon-globe 
      if(user&&user.shortname)
       .fb-share-button(data-href="http://apcentral.herokuapp.com/"+user.shortname, data-layout="button")
+     else
+      .fb-share-button(data-href="http://apcentral.herokuapp.com/", data-layout="button")
+     
      p.navbar-text#recognizer="Nobody Home!"
      script.
        setRec('/recognize');
