--- a/views/includes/login.jade
+++ b/views/includes/login.jade
@@ -1,5 +1,5 @@
 //button.btn.btn-default(type="button", data-toggle="modal" data-target=".login-modal",aria-label="login")
-span.glyphicon.glyphicon-log-in(data-toggle="modal", data-target=".login-modal",aria-label="login")
+span.glyphicon.glyphicon-log-in(data-toggle="modal", data-target=".login-modal",aria-label="login",title="Log in")
 .modal.fade.login-modal(tabindex="-1",role="login")
  .modal-dialog.modal-sm
   .modal-content
