--- a/views/includes/login.jade
+++ b/views/includes/login.jade
@@ -1,7 +1,7 @@
-//button.btn.btn-default(type="button", data-toggle="modal" data-target=".login-modal",aria-label="login")
-a(data-toggle="modal", data-target=".login-modal")
- span.glyphicon.glyphicon-log-in(aria-label="login",title="Log in")
-.modal.fade.login-modal(tabindex="-1",role="login")
+li
+ a(data-toggle="modal", data-target=".login-modal", href="#login-modal")
+  span.glyphicon.glyphicon-log-in(aria-label="login",title="Log in")
+.modal.fade.login-modal(tabindex="-1",role="login",id="login-modal")
  .modal-dialog.modal-sm
   .modal-content
    form.form-inline(role="login" action='/login',method='post')
