--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -12,7 +12,7 @@ html(lang="en")
         }
 
    //Navbar/header includer
-   nav.nav.navbar-default.navbar-static-bottom.navbar-inverse(role="navigation")
+   nav.navbar.navbar-inverse.navbar-static-bottom(role="navigation")
     div.container-fluid
      if(page&&page.title)
        p.hidden-xs.navbar-text=page.title
