--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -20,9 +20,9 @@ html(lang="en")
        p.hidden-xs.navbar-text Active Portfolio
      ul.nav.navbar-nav.navbar-right
       li
-       a(href="/")
+       a(href="/").xs-col-1
         span.glyphicon.glyphicon-globe(title="Global View")
-       a(href="#stats")
+       a(href="#stats").xs-col-1
         span.glyphicon.glyphicon-stats(title="Statistics")
       li 
        p.navbar-text#recognizer="Nobody Home!"
