--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -25,7 +25,6 @@ html(lang="en")
       li
        a(href="#stats").xs-col-1
         span.glyphicon.glyphicon-stats(title="Statistics")
-      li 
-       p.navbar-text#recognizer="Nobody Home!"
+     ul.nav.navbar-nav.navbar-right#recognizer 
        script.
         setRec('/recognize');
