--- a/views/includes/tools.jade
+++ b/views/includes/tools.jade
@@ -1,9 +1,9 @@
-a(href="/console/"+currentUser)
- span.glyphicon.glyphicon-cog(aria-label="settings",title="Settings")
-a(href="/"+currentUser)
+li:a(href="/console/"+currentUser)
+  span.glyphicon.glyphicon-cog(aria-label="settings",title="Settings")
+li:a(href="/"+currentUser)
  span.glyphicon.glyphicon-home(aria-label="home", title="Home")
 if(currentUser==visibleUser)
- a(href="#edit",data-toggle="tab")
+ li:a(href="#edit",data-toggle="tab")
   span.glyphicon.glyphicon-edit
-a(href="/logout")
+li:a(href="/logout")
  span.glyphicon.glyphicon-log-out(aria-label="logout", title="Log Out")
