--- a/views/includes/tools.jade
+++ b/views/includes/tools.jade
@@ -4,6 +4,9 @@ li
 li 
  a(href="/"+currentUser)
   span.glyphicon.glyphicon-home(aria-label="home", title="Home")
+li
+ a(href="#qrModal")
+  span.glyphicon.glyphicon-qrcode
 if(currentUser==visibleUser)
  li
   a(href="#edit",data-toggle="tab")
