--- a/views/entryForm.jade
+++ b/views/entryForm.jade
@@ -36,46 +36,56 @@ form.entry(method="post" action="/"+user+"/"+method)
  if(page&&page.entries)
     each entry, i in page.entries
       div(id="entry_"+i)
-       label Entry Label
-       input(name="page[entries]["+i+"][label]", value=entry.label) 
-       //, onLoad="incrementR()")
-       label Entry Content
-       input(name="page[entries]["+i+"][content]", value=entry.content)
-       label Entry Link
-       input(name="page[entries]["+i+"][link]", value=entry.link)
-       label Entry Link Description
-       input(name="page[entries]["+i+"][linkdesc]", value=entry.linkdesc)
-       label Entry Link Type
-       //input(name="page[entries]["+i+"][type]", value=entry.type)
-       select(name="page[entries]["+i+"][type]")
-        if(entry.type == "viewer")
+       .form-group
+        label(for="page[entries]["+i+"][label]") Entry Label
+        input(name="page[entries]["+i+"][label]", value=entry.label) 
+        //, onLoad="incrementR()")
+       .form-group
+        label(for="page[entries]["+i+"][content]") Entry Content
+        input(name="page[entries]["+i+"][content]", value=entry.content)
+       .form-group
+        label(for="page[entries]["+i+"][link]") Entry Link
+        input(name="page[entries]["+i+"][link]", value=entry.link)
+       .form-group
+        label(for="page[entries]["+i+"][linkdesc]") Entry Link Description
+        input(name="page[entries]["+i+"][linkdesc]", value=entry.linkdesc)
+       .form-group
+        label(for="page[entries]["+i+"][type]") Entry Link Type
+        //input(name="page[entries]["+i+"][type]", value=entry.type)
+        select(name="page[entries]["+i+"][type]")
+         if(entry.type == "viewer")
           option(value="viewer" selected) Viewer
           option(value="menu") Menu
           option(value="external") External Link
-        else if(entry.type =="menu")
+         else if(entry.type =="menu")
           option(value="viewer") Viewer
           option(value="menu" selected) Menu
           option(value="external") External Link
-        else
+         else
           option(value="viewer") Viewer
           option(value="menu") Menu
           option(value="external" selected) External Link
     a(onClick="addAnotherSet();incrementR();", id="end") Add Another Entry
   else
    div(id="entry_0")
-    label Entry Label
-    input(name="page[entries][0][label]")
-    label Entry Content
-    input(name="page[entries][0][content]")
-    label Entry Link
-    input(name="page[entries][0][link]")
-    label Entry Link Description
-    input(name="page[entries][0][linkdesc]")
-    label Entry Link Type
-    select(name="page[entries][0][type]") 
-     option(value="viewer") Viewer
-     option(value="menu") Menu
-     option(value="external" selected) External Link
+    .form-group
+     label(for="page[entries][0][label]") Entry Label
+     input(name="page[entries][0][label]")
+    .form-group
+     label(for="page[entries][0][content]") Entry Content
+     input(name="page[entries][0][content]")
+    .form-group
+     label(for="page[entries][0][link]") Entry Link
+     input(name="page[entries][0][link]")
+    .form-group
+     label(for="page[entries][0][linkdesc]") Entry Link Description
+     input(name="page[entries][0][linkdesc]")
+    .form-group
+     label(for="page[entries][0][type]") Entry Link Type
+     select(name="page[entries][0][type]") 
+      option(value="viewer") Viewer
+      option(value="menu") Menu
+      option(value="external" selected) External Link
    a(onClick="addAnotherSet();incrementR();", id="end") Add Another Entry
   div
     input(type='submit', value='Register')
