--- a/views/entryForm.jade
+++ b/views/entryForm.jade
@@ -16,75 +16,88 @@ form.entry.form-horizontal(method="post" action="/"+user+"/"+method)
     input(type=hidden, name="path",value=path)
  .form-group
   label.col-sm-2.control-label(for="page[title]") Title
-  if(page&&page.title)
+  .col-sm-10
+   if(page&&page.title)
     input(name="page[title]",value=page.title) 
-  else
+   else
     input(name="page[title]")
  .form-group
   label.col-sm-2.control-label(for="page[desc]") Description
-  if(page&&page.desc)
+  .col-sm-10
+   if(page&&page.desc)
     input(name="page[desc]",value=page.desc)
-  else
+   else
     input(name="page[desc]")
  .form-group
   label.col-sm-2.control-label(for="page[path]") Path
-  if(page&&page.path)
+  .col-sm-10
+   if(page&&page.path)
     input(name="page[path]",value=page.path)
-  else
+   else
     input(name="page[path]")
  if(page&&page.entries)
     each entry, i in page.entries
       div(id="entry_"+i)
        .form-group
         label.col-sm-2.control-label(for="page[entries]["+i+"][label]") Entry Label
-        input(name="page[entries]["+i+"][label]", value=entry.label) 
+        .col-sm-10
+         input(name="page[entries]["+i+"][label]", value=entry.label) 
         //, onLoad="incrementR()")
        .form-group
         label.col-sm-2.control-label(for="page[entries]["+i+"][content]") Entry Content
-        input(name="page[entries]["+i+"][content]", value=entry.content)
+        .col-sm-10
+         input(name="page[entries]["+i+"][content]", value=entry.content)
        .form-group
         label.col-sm-2.control-label(for="page[entries]["+i+"][link]") Entry Link
-        input(name="page[entries]["+i+"][link]", value=entry.link)
+        .col-sm-10
+         input(name="page[entries]["+i+"][link]", value=entry.link)
        .form-group
         label.col-sm-2.control-label(for="page[entries]["+i+"][linkdesc]") Entry Link Description
-        input(name="page[entries]["+i+"][linkdesc]", value=entry.linkdesc)
+        .col-sm-10
+         input(name="page[entries]["+i+"][linkdesc]", value=entry.linkdesc)
        .form-group
         label.col-sm-2.control-label(for="page[entries]["+i+"][type]") Entry Link Type
         //input(name="page[entries]["+i+"][type]", value=entry.type)
-        select(name="page[entries]["+i+"][type]")
-         if(entry.type == "viewer")
-          option(value="viewer" selected) Viewer
-          option(value="menu") Menu
-          option(value="external") External Link
-         else if(entry.type =="menu")
-          option(value="viewer") Viewer
-          option(value="menu" selected) Menu
-          option(value="external") External Link
-         else
-          option(value="viewer") Viewer
-          option(value="menu") Menu
-          option(value="external" selected) External Link
+        .col-sm-10
+         select(name="page[entries]["+i+"][type]")
+          if(entry.type == "viewer")
+           option(value="viewer" selected) Viewer
+           option(value="menu") Menu
+           option(value="external") External Link
+          else if(entry.type =="menu")
+           option(value="viewer") Viewer
+           option(value="menu" selected) Menu
+           option(value="external") External Link
+          else
+           option(value="viewer") Viewer
+           option(value="menu") Menu
+           option(value="external" selected) External Link
     a(onClick="addAnotherSet();incrementR();", id="end") Add Another Entry
   else
    div(id="entry_0")
     .form-group
      label.col-sm-2.control-label(for="page[entries][0][label]") Entry Label
-     input(name="page[entries][0][label]")
+     .col-sm-10
+      input(name="page[entries][0][label]")
     .form-group
      label.col-sm-2.control-label(for="page[entries][0][content]") Entry Content
-     input(name="page[entries][0][content]")
+     .col-sm-10
+      input(name="page[entries][0][content]")
     .form-group
      label.col-sm-2.control-label(for="page[entries][0][link]") Entry Link
-     input(name="page[entries][0][link]")
+     .col-sm-10
+      input(name="page[entries][0][link]")
     .form-group
      label.col-sm-2.control-label(for="page[entries][0][linkdesc]") Entry Link Description
-     input(name="page[entries][0][linkdesc]")
+     .col-sm-10
+      input(name="page[entries][0][linkdesc]")
     .form-group
      label.col-sm-2.control-label(for="page[entries][0][type]") Entry Link Type
-     select(name="page[entries][0][type]") 
-      option(value="viewer") Viewer
-      option(value="menu") Menu
-      option(value="external" selected) External Link
+     .col-sm-10
+      select(name="page[entries][0][type]") 
+       option(value="viewer") Viewer
+       option(value="menu") Menu
+       option(value="external" selected) External Link
    a(onClick="addAnotherSet();incrementR();", id="end") Add Another Entry
   div
     input(type='submit', value='Register')
