--- a/views/entryForm.jade
+++ b/views/entryForm.jade
@@ -11,9 +11,9 @@ script.
   }
 //form.entry(method="post" action="/"+user+"/"+method);
 form.entry.form-horizontal(method="post" action="/"+user+"/"+method)
-  if(path)
-    label(for="path") Previous Path
-    input(type=hidden, name="path",value=path)
+  //if(path)
+  //  label(for="path") Previous Path
+  //  input(type=hidden, name="path",value=path)
  .form-group
   label.col-sm-2.control-label(for="page[title]") Title
   .col-sm-10
