--- a/views/splash.jade
+++ b/views/splash.jade
@@ -5,7 +5,7 @@ div.row
       var x = location.pathname;
       //alert(x);
       //$('#viewport').load("/personalInfo");
-    div.container(onload='setViewer("'+page.shortname+'/stats")')
+    div.container(onload='setViewer("/stats")')
      div.col-xs-12.col-sm-6(style="margin:0px;border:0px;padding:0px;")
       div.well.well-sm(style="background: linear-gradient(to top, grey, white);border:0px;margin:0px;")
        div(class="panel-group",id="accordion")
