--- a/views/entryForm.jade
+++ b/views/entryForm.jade
@@ -14,7 +14,6 @@ script.
   //  label(for="path") Previous Path
   //  input(type=hidden, name="path",value=path)
 form.entry.form-horizontal(method="post" action="/"+user+"/"+method)
-  input(type=hidden, name="path",value=path)
   .form-group
    label.col-sm-2.control-label(for="page[title]") Title
    .col-sm-10
@@ -101,4 +100,6 @@ form.entry.form-horizontal(method="post" action="/"+user+"/"+method)
         option(value="external" selected) External Link
     a(onClick="addAnotherSet();incrementR();", id="end") Add Another Entry
    div
+     if(page&&page.path)
+      input(type="hidden", name="path",value=page.path)
      input(type='submit', value='Register') 
