--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -20,10 +20,10 @@ html(lang="en")
        p.hidden-xs.navbar-text Active Portfolio
      ul.nav.navbar-nav.navbar-right
       li
-       a(href="/").xs-col-1
+       a(href="/").col-xs-1
         span.glyphicon.glyphicon-globe(title="Global View")
       li
-       a(href="#stats").xs-col-1
+       a(href="#stats").col-xs-1
         span.glyphicon.glyphicon-stats(title="Statistics")
      ul.nav.navbar-nav.navbar-right#recognizer 
        script.
