--- a/views/includes/login.jade
+++ b/views/includes/login.jade
@@ -1,5 +1,5 @@
 li
- a(data-toggle="modal", data-target=".login-modal", href="#login-modal")
+ a(data-toggle="modal", data-target=".login-modal", href="#login-modal").col-xs-1
   span.glyphicon.glyphicon-log-in(aria-label="login",title="Log in")
 .modal.fade.login-modal(tabindex="-1",role="login",id="login-modal")
  .modal-dialog.modal-sm
