--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -18,7 +18,7 @@ html(lang="en")
        p.hidden-xs.navbar-text=page.title
      else
        p.hidden-xs.navbar-text Active Portfolio
-     ul.nav.navbar-nav.navbar-right
+     ul.nav.navbar-nav.navbar-right.col.xs-2
       li
        a(href="/").col-xs-1
         span.glyphicon.glyphicon-globe(title="Global View")
