--- a/views/includes/tools.jade
+++ b/views/includes/tools.jade
@@ -11,7 +11,7 @@ li
  .modal-dialog.modal-sm
   .modal-content
    img(src='https://api.qrserver.com/v1/create-qr-code/?data=http://apcentral.herokuapp.com/'+visibleUser+'/&amp;size=100x100" alt="" title=""')
-if( currentUser..shortname==visibleUser)
+if( currentUse..shortname==visibleUser)
  li
   a(href="#edit",data-toggle="tab").col-xs-1
    span.glyphicon.glyphicon-edit
