--- a/views/includes/tools.jade
+++ b/views/includes/tools.jade
@@ -13,7 +13,7 @@ li
    img(src='https://api.qrserver.com/v1/create-qr-code/?data=http://apcentral.herokuapp.com/'+visibleUser+'/&amp;size=100x100" alt="" title=""')
 if( currentUser.shortname==visibleUser)
  li
-  a(href="/"+currentUser.shortname+"/edit").col-xs-1
+  a(href=pathypath+"edit").col-xs-1
    span.glyphicon.glyphicon-edit
  li
   a(href="/"+currentUser.shortname+"/add").col-xs-1
