--- a/views/splash.jade
+++ b/views/splash.jade
@@ -5,9 +5,9 @@ div.row
       var x = location.pathname;
       //alert(x);
       //$('#viewport').load("/personalInfo");
-    div.container(onload='setViewer("/stats")')
-     div.col-xs-12.col-sm-6(style="margin:0px;border:0px;padding:0px;")
-      div.well.well-sm(style="background: linear-gradient(to top, grey, white);border:0px;margin:0px;")
+    div.col-xs-12.col-sm-6.container(onload='setViewer("/stats")')
+     div(style="margin:0px;border:0px;padding:0px;")
+      div.well.well-sm(style="background: linear-gradient(to top, white, black);border:0px;margin:0px;")
        div(class="panel-group",id="accordion")
         if(page&&page.entries)
          each entry,i in page.entries
