--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -12,7 +12,7 @@ html(lang="en")
         }
 
    //Navbar/header includer
-   nav.navbar.navbar-inverse.navbar-static-bottom(role="navigation",style='margin-bottom="0px"')
+   nav.navbar.navbar-inverse.navbar-static-bottom(role="navigation",style="margin-bottom='0px';border-bottom='0px'")
     div.container-fluid
      if(page&&page.title)
        p.hidden-xs.navbar-text=page.title
