--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -10,7 +10,10 @@ html(lang="en")
       function setRec(e){
         $("#recognizer").load(e);
         }
-
+   style.
+    .navbar:{
+    margin-bottom:'0px'
+    }
    //Navbar/header includer
    nav.navbar.navbar-inverse.navbar-static-bottom(role="navigation",style="margin-bottom:'0px';max-height:'52px'")
     div.container-fluid
