--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -11,9 +11,7 @@ html(lang="en")
         $("#recognizer").load(e);
         }
    style.
-    .navbar:{
-    margin-bottom:'0px'
-    }
+    .navbar{margin-bottom:'0px';}
    //Navbar/header includer
    nav.navbar.navbar-inverse.navbar-static-bottom(role="navigation",style="margin-bottom:'0px';max-height:'52px'")
     div.container-fluid
