--- a/views/splash.jade
+++ b/views/splash.jade
@@ -6,7 +6,7 @@ div.row
       //alert(x);
       //$('#viewport').load("/personalInfo");
     div.col-xs-12.col-sm-6(onload='setViewer("/stats")' style="margin:0px;border:0px;")
-      div.well.well-sm(style="background: linear-gradient(to top, white, black);border:0px;margin:0px;")
+      div.well.well-sm(style="background: linear-gradient(to top, white, black);border:0px;margin:0px;padding-right:0px")
        div(class="panel-group",id="accordion")
         if(page&&page.entries)
          each entry,i in page.entries
