--- a/views/splash.jade
+++ b/views/splash.jade
@@ -1,6 +1,6 @@
 include includes/nav
 div.row
-    div.col-xs-12.col-sm-6(style="margin:0px;border:0px;")
+    div.col-xs-12.col-sm-6(style="margin:0px;border:0px;margin-right:-15ps")
       div.well.well-sm(style="background: linear-gradient(to top, white, black);border:0px;margin:0px;")
        div(class="panel-group",id="accordion")
         if(page&&page.entries)
