--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -19,13 +19,13 @@ html(lang="en")
        p.hidden-xs.navbar-text=page.title
      else
        p.hidden-xs.navbar-text Active Portfolio
-     ul.nav.navbar-nav.navbar-right.col-xs-2
+     ul.nav.navbar-nav.navbar-right.col-xs-3
       li
        a(href="/").col-xs-1
         span.glyphicon.glyphicon-globe(title="Global View")
       li
        a(href="#stats").col-xs-1
         span.glyphicon.glyphicon-stats(title="Statistics")
-     ul.nav.navbar-nav.navbar-right#recognizer 
+     ul.nav.navbar-nav.navbar-right.col-xs-8#recognizer 
        script.
         setRec('/recognize');
