--- a/views/splash.jade
+++ b/views/splash.jade
@@ -1,7 +1,7 @@
 include includes/nav
 div.row
     div.col-xs-12.col-sm-6(style="margin:0px;border:0px;padding-right:0px")
-      div.well.well-sm(style="background: linear-gradient(to top, white, black);border:0px;margin:0px;")
+      div.well.well-sm(style="background: linear-gradient(to top, white, black);border:0px;border-radius:0px;margin:0px;")
        div(class="panel-group",id="accordion")
         if(page&&page.entries)
          each entry,i in page.entries
