--- a/views/entryForm.jade
+++ b/views/entryForm.jade
@@ -5,11 +5,13 @@ script.
     r++;
   }
   function addAnotherSet(){
-    var nth = 0;
-   $("[id^='entry_']").function(){nth++};
-   $("<div class='kjdentry' id='entry_"+nth+"'><label>Entry Label</label><input name='page[entries]["+nth+"][label]'><label>Entry Content</label><input name='page[entries]["+nth+"][content]'><label>Entry Link</label><input name='page[entries]["+nth+"][link]'><label>Entry Link Description</label><input name='page[entries]["+nth+"][linkdesc]'><label>Entry Link Type</label><select name='page[entries]["+nth+"][type]'><option value='viewer'>Viewer</option><option value='menu'>Menu</option><option value='external' selected>External Link</option></div>").insertBefore("#end");    
+    var nth = r+1;
+   $("<div class='kjdentry' entry="+nth+" id='entry_"+nth+"'><label>Entry Label</label><input name='page[entries]["+nth+"][label]'><label>Entry Content</label><input name='page[entries]["+nth+"][content]'><label>Entry Link</label><input name='page[entries]["+nth+"][link]'><label>Entry Link Description</label><input name='page[entries]["+nth+"][linkdesc]'><label>Entry Link Type</label><select name='page[entries]["+nth+"][type]'><option value='viewer'>Viewer</option><option value='menu'>Menu</option><option value='external' selected>External Link</option></div>").insertBefore("#end");    
    // $("<p> The "+nth+" test </p>").insertBefore("#end");
   }
+  $(function(){
+  $(".kjdentry").last()
+  });
   //form.entry(method="post" action="/"+user+"/"+method);
   //if(path)
   //  label(for="path") Previous Path
